--- a/PFfront/src/index.html
+++ b/PFfront/src/index.html
@@ -5,9 +5,10 @@
   <title>PFfront</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favi.ico">
 </head>
-<body>
+<body style="background-color: #252525;">
+
   <app-root></app-root>
 </body>
 </html>
