--- a/PFfront/src/index.html
+++ b/PFfront/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favi.ico">
 </head>
-<body style="background-color: #252525;">
+<body>
 
   <app-root></app-root>
 </body>
